--- a/src/Blog.Web/Views/Posts/_ListComments.cshtml
+++ b/src/Blog.Web/Views/Posts/_ListComments.cshtml
@@ -1,10 +1,15 @@
-﻿@model IEnumerable<CommentPostModel>
+﻿@model IEnumerable<CommentPostViewModel>
 
 @foreach (var comment in Model)
 {
-    <div class="row">
-        <div class="col-md-12">
-            @comment.Description
+    <div class="card" style="margin-bottom: 10px;">
+        <div class="card-body">
+            <h6 class="card-subtitle mb-2 text-muted">@comment.CreateAt.ToString("dd/MM/yyyy HH:mm:ss") - @comment.UserName</h6>
+            <p class="card-text">@comment.Description</p>
+            @if (ViewBag.UserId == comment.UserId || ViewBag.IsAdm)
+            {
+                <a class="btn btn-danger text-uppercase" asp-action="DeleteComment" asp-route-id="@comment.Id">Excluir</a>
+            }
         </div>
     </div>
 }   
