--- a/src/Blog.Web/Views/Shared/_Layout.cshtml
+++ b/src/Blog.Web/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
             </div>
         </nav>        
     </header>
-    <div class="container">
+    <div class="container" style="margin-top: 100px; margin-bottom: 100px">
         <main role="main">
             @RenderBody()
         </main>
