--- a/src/Blog.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/Blog.Web/Views/Shared/_LoginPartial.cshtml
@@ -8,24 +8,24 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="Create" title="Criar Post">Criar Post</a>
+        <a class="nav-link" asp-area="" asp-controller="Posts" asp-action="Create" title="Criar Post">Criar Post</a>
     </li>
     <li class="nav-item">
-        <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Olá @UserManager.GetUserName(User)!</a>
+        <a id="manage" class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Olá @UserManager.GetUserName(User)!</a>
     </li>
     <li class="nav-item">
-        <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Posts", "Index", new { area = "" })">
-                <button id="logout" type="submit" class="nav-link text-dark">Logout</button>
+        <form id="logoutForm" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("", "Posts", new { area = "" })">            
         </form>
+        <a class="nav-link" href="javascript:{}" onclick="document.getElementById('logoutForm').submit(); return false;">Sair</a>
     </li>
 }
 else
 {
     <li class="nav-item">
-        <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        <a class="nav-link" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <a class="nav-link" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
     </li>
 }
 </ul>
