--- a/src/Blog.Web/Views/_ViewImports.cshtml
+++ b/src/Blog.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using Blog.Web
 @using Blog.Web.Models
-@using Blog.Data.Models
+@using Blog.Application.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
